--- a/violations.html
+++ b/violations.html
@@ -94,6 +94,8 @@
                  <i class="fas fa-plane"></i>&nbsp;Frequency of air travel
                  <span class="caret"></span></button>
                  <ul class="dropdown-menu">
+                   &nbsp;&nbsp;<i class="fas fa-plane"></i>&nbsp;Frequency of air travel
+                   <li class="divider"></li>
                    <li><a>Once a year or less</a></li>
                    <li><a>Once a month or less</a></li>
                    <li><a>A few times per month</a></li>
@@ -106,6 +108,8 @@
                   <i class="fas fa-birthday-cake"></i>&nbsp; Age
                   <span class="caret"></span></button>
                   <ul class="dropdown-menu">
+                    &nbsp;&nbsp;<i class="fas fa-birthday-cake"></i>&nbsp; Age
+                    <li class="divider"></li>
                     <li><a>18-29</a></li>
                     <li><a>30-44</a></li>
                     <li><a>45-60</a></li>
@@ -117,6 +121,8 @@
                    <i class="fas fa-dollar-sign"></i>&nbsp; Income
                    <span class="caret"></span></button>
                    <ul class="dropdown-menu">
+                     &nbsp;&nbsp;<i class="fas fa-dollar-sign"></i>&nbsp; Income
+                     <li class="divider"></li>
                      <li><a>$0 - $24,999</a></li>
                      <li><a>$25,000 - $49,999</a></li>
                      <li><a>$50,000 - $99,999</a></li>
@@ -129,6 +135,8 @@
                     <i class="fas fa-graduation-cap"></i>&nbsp; Education
                     <span class="caret"></span></button>
                     <ul class="dropdown-menu">
+                      &nbsp;&nbsp;<i class="fas fa-graduation-cap"></i>&nbsp; Education
+                      <li class="divider"></li>
                       <li><a>High school degree</a></li>
                       <li><a>Some college or Associate degree</a></li>
                       <li><a>Graduate degree</a></li>
@@ -140,6 +148,8 @@
                      <i class="fas fa-map-marker"></i>&nbsp; Location
                      <span class="caret"></span></button>
                      <ul class="dropdown-menu">
+                       &nbsp;&nbsp;<i class="fas fa-map-marker"></i>&nbsp; Location
+                       <li class="divider"></li>
                        <li><a>New England</a></li>
                        <li><a>East North Central</a></li>
                        <li><a>East South Central</a></li>
