--- a/children.html
+++ b/children.html
@@ -109,12 +109,13 @@
              </form>
              <div class="dropdown mt3">
                <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">
-                 <i class="fas fa-plane"></i>&nbsp;Frequency of air travel
+                 <i class="fas fa-plane"></i><span class="textDropdown">&nbsp;Frequency of air travel</span>
                  <span class="caret"></span></button>
                  <ul class="dropdown-menu">
                    <li><a>
                    <li id ="freq"><a>
-                         <i class="fas fa-plane"></i>&nbsp;Frequency of air travel
+                         <i class="fas fa-plane"></i>
+                         &nbsp;Frequency of air travel
                        </a>
                       </li>
                    <li class="divider"></li>
@@ -127,7 +128,7 @@
               </div>
               <div class="dropdown mt3">
                 <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">
-                  <i class="fas fa-birthday-cake"></i>&nbsp; Age
+                  <i class="fas fa-birthday-cake"></i><span class="textDropdown">&nbsp; Age</span>
                   <span class="caret"></span></button>
                   <ul class="dropdown-menu">
                     <li><a>
@@ -144,7 +145,7 @@
                </div>
                <div class="dropdown mt3">
                  <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">
-                   <i class="fas fa-dollar-sign"></i>&nbsp; Income
+                   <i class="fas fa-dollar-sign"></i><span class="textDropdown">&nbsp; Income</span>
                    <span class="caret"></span></button>
                    <ul class="dropdown-menu">
                      <li><a>
@@ -162,13 +163,12 @@
                 </div>
                 <div class="dropdown mt3">
                   <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">
-                    <i class="fas fa-graduation-cap"></i>
-                      <span>&nbsp; Education</span>
+                    <i class="fas fa-graduation-cap"></i><span class="textDropdown">&nbsp; Education</span>
                     <span class="caret"></span></button>
                     <ul class="dropdown-menu">
                       <li><a>
                       <li id ="degree"><a>
-                         <i class="fas fa-graduation-cap"></i><span>&nbsp; Education</span> 
+                         <i class="fas fa-graduation-cap"></i>&nbsp; Education
                        </a>
                       </li>
                       <li class="divider"></li>
@@ -180,7 +180,7 @@
                  </div>
                  <div class="dropdown mt3">
                    <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">
-                     <i class="fas fa-map-marker"></i>&nbsp; Location
+                     <i class="fas fa-map-marker"></i><span class="textDropdown">&nbsp; Location</span>
                      <span class="caret"></span></button>
                      <ul class="dropdown-menu">
                        <li><a>
@@ -202,7 +202,7 @@
                   </div>
                   <div class="dropdown mt3">
                     <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">
-                      <i class="fas fa-couch"></i>&nbsp; Frequency of seat reclining
+                      <i class="fas fa-couch"></i><span class ="textDropdown">&nbsp; Frequency of seat reclining</span>
                       <span class="caret"></span></button>
                       <ul class="dropdown-menu">
                         <li><a>
