--- a/reclining.html
+++ b/reclining.html
@@ -91,11 +91,13 @@
              </form>
              <div class="dropdown mt3">
                <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">
-                 <i class="fas fa-plane"></i>&nbsp;Frequency of air travel
+                 <i class="fas fa-plane"></i><span class="textDropdown">&nbsp;Frequency of air travel</span>
                  <span class="caret"></span></button>
                  <ul class="dropdown-menu">
                    <li><a>
-                         <i class="fas fa-plane"></i>&nbsp;Frequency of air travel
+                   <li id ="freq"><a>
+                         <i class="fas fa-plane"></i>
+                         &nbsp;Frequency of air travel
                        </a>
                       </li>
                    <li class="divider"></li>
@@ -108,10 +110,11 @@
               </div>
               <div class="dropdown mt3">
                 <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">
-                  <i class="fas fa-birthday-cake"></i>&nbsp; Age
+                  <i class="fas fa-birthday-cake"></i><span class="textDropdown">&nbsp; Age</span>
                   <span class="caret"></span></button>
                   <ul class="dropdown-menu">
                     <li><a>
+                    <li id ="age"><a>
                          <i class="fas fa-birthday-cake"></i>&nbsp; Age
                        </a>
                       </li>
@@ -124,10 +127,11 @@
                </div>
                <div class="dropdown mt3">
                  <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">
-                   <i class="fas fa-dollar-sign"></i>&nbsp; Income
+                   <i class="fas fa-dollar-sign"></i><span class="textDropdown">&nbsp; Income</span>
                    <span class="caret"></span></button>
                    <ul class="dropdown-menu">
                      <li><a>
+                     <li id ="income"><a>
                         <i class="fas fa-dollar-sign"></i>&nbsp; Income
                        </a>
                       </li>
@@ -135,16 +139,17 @@
                      <li><a>$0 - $24,999</a></li>
                      <li><a>$25,000 - $49,999</a></li>
                      <li><a>$50,000 - $99,999</a></li>
-                     <li><a>$100,000 - $149,999	</a></li>
+                     <li><a>$100,000 - $149,999</a></li>
                      <li><a>$150000</a></li>
                    </ul>
                 </div>
                 <div class="dropdown mt3">
                   <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">
-                    <i class="fas fa-graduation-cap"></i>&nbsp; Education
+                    <i class="fas fa-graduation-cap"></i><span class="textDropdown">&nbsp; Education</span>
                     <span class="caret"></span></button>
                     <ul class="dropdown-menu">
                       <li><a>
+                      <li id ="degree"><a>
                          <i class="fas fa-graduation-cap"></i>&nbsp; Education
                        </a>
                       </li>
@@ -157,10 +162,11 @@
                  </div>
                  <div class="dropdown mt3">
                    <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">
-                     <i class="fas fa-map-marker"></i>&nbsp; Location
+                     <i class="fas fa-map-marker"></i><span class="textDropdown">&nbsp; Location</span>
                      <span class="caret"></span></button>
                      <ul class="dropdown-menu">
                        <li><a>
+                       <li id ="location"><a>
                           <i class="fas fa-map-marker"></i>&nbsp; Location
                         </a>
                        </li>
