--- a/children.html
+++ b/children.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="" content="Visualization of survey data about etiquette while flying">
     <title>Children</title>
-	<script src="vendors/jquery/dist/jquery.min.js"></script>
+	  <script src="vendors/jquery/dist/jquery.min.js"></script>
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="vendors/bootstrap/css/bootstrap.min.css">
     <!-- Optional theme -->
@@ -13,6 +13,7 @@
     <!-- Latest compiled and minified JavaScript -->
     <script src="vendors/bootstrap/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300" rel="stylesheet">
     <link rel="stylesheet" href="resources/css/styles.css">
 </head>
 
@@ -72,7 +73,7 @@
 
     <div class="row mt3 ml5">
       <div class = "col-sm-12 col-md-12 col-lg-12">
-        <h1 class = "categoryHeading" style="padding-top: 40px">Children</h1>
+        <h3>Children</h3>
       </div>
     </div>
 
@@ -82,7 +83,7 @@
     <div class ="standardFilters">
       <div class="row mt2 ml5">
         <div class = "col-sm-8 col-md-7 col-lg-7">
-          <h2 class = "bubbleQuestion">In general, is itrude to bring a baby on a plane?</h2>
+          <h2 class = "bubbleQuestion">In general, is it rude to bring a baby on a plane?</h2>
         </div>
       </div>
       <div class="row mt3 ml2 mr2">
