--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous">
     <!-- Latest compiled and minified JavaScript -->
     <script src="vendors/bootstrap/js/bootstrap.min.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300" rel="stylesheet">
     <link rel="stylesheet" href="resources/css/styles.css">
 </head>
 
@@ -77,7 +78,7 @@
     <script src="./resources/js/FlyingEtiquette.js"></script>
     <script src="./resources/js/StartDiagramManager.js"></script>
     <script src="./resources/js/StartDiagramModel.js"></script>
-    <script> 
+    <script>
             FlyingEtiquette.init()
     </script>
 </body>
