--- a/seat.html
+++ b/seat.html
@@ -86,7 +86,7 @@
       </div>
       <div class="row mt3 ml2 mr2">
         <div class = "col-sm-8 col-md-7 col-lg-7">
-          <svg class = "ml6 mr6" id="seatThreeArmrestBubbleChart"></svg>
+          <svg class = "ml6 mr6 bubbleDiagram" id="seatThreeArmrestBubbleChart"></svg>
         </div>
         <div class = "col-lg-1">
         </div>
@@ -246,7 +246,7 @@
         </div>
         <div class="row mt3 ml2 mr2">
           <div class = "col-sm-8 col-md-7 col-lg-7">
-            <svg class = "ml6 mr6" id="seatThreeArmrestBubbleChart"></svg>
+            <svg class = "ml6 mr6 bubbleDiagram" id="seatThreeArmrestBubbleChart"></svg>
           </div>
           <div class = "col-lg-1">
           </div>
@@ -406,7 +406,7 @@
           </div>
           <div class="row mt3 ml2 mr2">
             <div class = "col-sm-8 col-md-7 col-lg-7">
-              <svg class = "ml6 mr6" id="seatThreeArmrestBubbleChart"></svg>
+              <svg class = "ml6 mr6 bubbleDiagram" id="seatThreeArmrestBubbleChart"></svg>
             </div>
             <div class = "col-lg-1">
             </div>
