--- a/index.html
+++ b/index.html
@@ -68,8 +68,15 @@
 	<main>
         <div id="startDiagramBox" class="startDiagramBox">
             <svg class="startDiagram"></svg>
-            <div class="outerInfo">
-                <span class="outerInfoText"></span>
+            <div class="infoBox">
+                <div class="outerInfo">
+                    <span class="infoBoxText">Question (Outer Ring):</span>
+                    <span class="outerInfoText"></span>
+                </div>
+                <div class="innerInfo">
+                    <span class="infoBoxText">Answer (Inner Ring):</span>
+                    <span class="innerInfoText"></span>
+                </div>
             </div>
         </div>
 	</main>
